[SONA-38] Fix payment gateway session type issue

--- a/public/paymentgateway.html
+++ b/public/paymentgateway.html
@@ -129,7 +129,7 @@ input { display: none !important; }
         document.getElementById('city_field').value = customerDetails.city;
         document.getElementById('country_field').value = customerDetails.country;
         document.getElementById('order_id_field').value = orderId;
-        document.getElementById('items_field').value = `Counseling Session - ${sessionType}`;
+        document.getElementById('items_field').value = `Counseling Session`;
         document.getElementById('currency_field').value = currency;
         document.getElementById('amount_field').value = amountFormatted;
         document.getElementById('hash_field').value = hash;
